k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  annotations:
    cert-manager.io/cluster-issuer: production-app

spec:
  ingressClassName: nginx
  rules:
  - host: thanksfordomain.anishbista.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: boardgame-svc
            port:
              number: 8080
  tls:
  - hosts:
    - thanksfordomain.anishbista.xyz
    secretName: app
